--- a/frontend/src/styles/pages/_login.scss
+++ b/frontend/src/styles/pages/_login.scss
@@ -19,25 +19,22 @@
       padding: 0 20px;
       font-size: 16px;
       color: #666;
+      text-align: center;
       &::placeholder {
         color: #999;
       }
     }
     button {
-      margin-top: 10px;
-      border: 0;
+      margin-top: 2vh;      
       border-radius: 4px;
       height: 48px;
-      font-size: 16px;
-      background: #46b3fa;
-      font-weight: bold;
-      color: #fff;
-      cursor: pointer;
-    }
+      font-size: 16px;      
+      font-weight: bold;         
+    }          
   }
-  img {
+  svg {
     height: 50%;
     width: 50%;
     margin: auto;
   }
-}
+}    
