adicionado eslint ao projeto frontend, implementado loader para as requisições

--- a/frontend/src/styles/utils/_globalstyles.scss
+++ b/frontend/src/styles/utils/_globalstyles.scss
@@ -1,6 +1,7 @@
 html {
   font-size: 10px;
-  font-family: 'roboto regular', sans-serif, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: "roboto regular", sans-serif, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu,
+    Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   scroll-behavior: smooth;
 }
 
@@ -20,7 +21,7 @@ body {
 }
 
 .grid-template-columns {
-	grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 1fr;
 }
 
 .space-around {
@@ -35,5 +36,31 @@ body {
   .col-#{$i} {
     width: $i * 10%;
     float: left;
+  }
+}
+
+.spinner {
+  top: 0;
+  overflow: hidden;
+  position: fixed;
+  height: 100vh;
+  width: 100%;
+  z-index: 99999;
+  background: white;
+  opacity: 0.9;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.loader {
+  animation: spinner 3s infinite linear;
+  @keyframes spinner {
+    from {
+      transform: rotate(0deg);
+    }
+    to {
+      transform: rotate(360deg);
+    }
   }
 }
