--- a/frontend/src/styles/utils/_tipografia.scss
+++ b/frontend/src/styles/utils/_tipografia.scss
@@ -1,83 +1,83 @@
 @font-face {
-  font-family: 'roboto black';
-  src: '../../assets/fonts/Roboto-Black.ttf' format('truetype');
+  font-family: "roboto black";
+  src: "../../assets/fonts/Roboto-Black.ttf" format("truetype");
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'roboto black italic';
-  src: '../../assets/fonts/Roboto-BlackItalic.ttf' format('truetype');
+  font-family: "roboto black italic";
+  src: "../../assets/fonts/Roboto-BlackItalic.ttf" format("truetype");
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'roboto bold';
-  src: '../../assets/fonts/Roboto-Bold.ttf' format('truetype');
+  font-family: "roboto bold";
+  src: "../../assets/fonts/Roboto-Bold.ttf" format("truetype");
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'roboto bold italic';
-  src: '../../assets/fonts/Roboto-BoldItalic.ttf' format('truetype');
+  font-family: "roboto bold italic";
+  src: "../../assets/fonts/Roboto-BoldItalic.ttf" format("truetype");
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'roboto italic';
-  src: '../../assets/fonts/Roboto-Italic.ttf' format('truetype');
+  font-family: "roboto italic";
+  src: "../../assets/fonts/Roboto-Italic.ttf" format("truetype");
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'roboto light';
-  src: '../../assets/fonts/Roboto-Light.ttf' format('truetype');
+  font-family: "roboto light";
+  src: "../../assets/fonts/Roboto-Light.ttf" format("truetype");
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'roboto light italic';
-  src: '../../assets/fonts/Roboto-LightItalic.ttf' format('truetype');
+  font-family: "roboto light italic";
+  src: "../../assets/fonts/Roboto-LightItalic.ttf" format("truetype");
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'roboto medium';
-  src: '../../assets/fonts/Roboto-Medium.ttf' format('truetype');
+  font-family: "roboto medium";
+  src: "../../assets/fonts/Roboto-Medium.ttf" format("truetype");
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'roboto medium italic';
-  src: '../../assets/fonts/Roboto-MediumItalic.ttf' format('truetype');
+  font-family: "roboto medium italic";
+  src: "../../assets/fonts/Roboto-MediumItalic.ttf" format("truetype");
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'roboto regular';
-  src: '../../assets/fonts/Roboto-Regular.ttf' format('truetype');
+  font-family: "roboto regular";
+  src: "../../assets/fonts/Roboto-Regular.ttf" format("truetype");
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'roboto thin';
-  src: '../../assets/fonts/Roboto-Thin.ttf' format('truetype');
+  font-family: "roboto thin";
+  src: "../../assets/fonts/Roboto-Thin.ttf" format("truetype");
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'roboto thin italic';
-  src: '../../assets/fonts/Roboto-ThinItalic.ttf' format('truetype');
+  font-family: "roboto thin italic";
+  src: "../../assets/fonts/Roboto-ThinItalic.ttf" format("truetype");
   font-weight: normal;
   font-style: normal;
 }
